# boreal

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  boreal.cabal  cabal.project  cabal.project.freeze  ghc-tags.yaml
.github/workflows/: ci.yml  compiler.yml  linting.yml  vm.yml
app/: Main.hs
app/boreal/: CLI.hs  Main.hs
app/boreal/CLI/: Types.hs
boreal-api/: boreal-api.cabal
boreal-api/src/Boreal/Protocol/: BuildFlags.hs  DebugFlags.hs  Request.hs  Response.hs  Session.hs  Types.hs
boreal-client/: boreal-client.cabal
boreal-client/app/: Client.hs  Main.hs
boreal-client/src/Boreal/: Client.hs
boreal-daemon/: boreal-daemon.cabal
boreal-daemon/app/: Main.hs
boreal-daemon/compiler/Boreal/: PrimOps.hs  PrimTypes.hs  ScopeEnvironment.hs
boreal-daemon/compiler/Boreal/Backend/: Lua.hs
boreal-daemon/compiler/Boreal/Backend/Lua/: Types.hs
boreal-daemon/compiler/Boreal/Frontend/: Syntax.hs  TreeSitter.hs
boreal-daemon/compiler/Boreal/IR/: ANFCore.hs  RawCore.hs  Types.hs
boreal-daemon/compiler/Boreal/IR/ANFCore/: Types.hs
boreal-daemon/compiler/Boreal/IR/RawCore/: Renamer.hs  Types.hs
boreal-daemon/driver/: Driver.hs
boreal-daemon/driver/Driver/: CLI.hs  Cache.hs  Logging.hs  Query.hs  Rules.hs  Session.hs  Shutdown.hs
boreal-daemon/test/: Main.hs  Utils.hs
boreal-daemon/test/BorealTest/: ParserTest.hs  RawCoreTest.hs
boreal-daemon/test/BorealTest/Backend/: LuaRunTest.hs
boreal-daemon/test/golden/asm/: addition.s  arithmetic-operations.s  subtraction.s
boreal-daemon/test/golden/cst/: case-expression.hs  function-definition.hs  import-statement.hs  let-binding.hs  record-type.hs  sum-type.hs
boreal-daemon/tree-sitter-boreal/: Cargo.toml  Makefile  binding.gyp  go.mod  grammar.js  package.json  setup.py
boreal-daemon/tree-sitter-boreal/bindings/c/: tree-sitter-boreal.pc.in
boreal-daemon/tree-sitter-boreal/bindings/go/: binding.go  binding_test.go  go.mod
boreal-daemon/tree-sitter-boreal/bindings/node/: binding.cc
boreal-daemon/tree-sitter-boreal/bindings/python/tests/: test_binding.py
boreal-daemon/tree-sitter-boreal/bindings/python/tree_sitter_boreal/: binding.c
boreal-daemon/tree-sitter-boreal/bindings/rust/: lib.rs
boreal-daemon/tree-sitter-boreal/bindings/swift/TreeSitterBorealTests/: TreeSitterBorealTests.swift
boreal-daemon/tree-sitter-boreal/queries/: highlights.scm
boreal-daemon/tree-sitter-boreal/src/: grammar.json  node-types.json  parser.c
boreal-daemon/tree-sitter-boreal/test/corpus/: case_expression.txt  expressions.txt  if-then-else.txt  import_statement.txt  let-bindings.txt  qualified_module.txt  sum_type.txt
compiler/: Driver.hs
compiler/Boreal/: SourceInfo.hs
compiler/Boreal/Backend/: ASM.hs  Lua.hs
compiler/Boreal/Backend/Lua/: Types.hs
compiler/Boreal/Effect/: Rock.hs
compiler/Boreal/Frontend/: Source.hs  Syntax.hs  TreeSitter.hs  Types.hs
compiler/Boreal/IR/: ANFCore.hs  RawCore.hs  Types.hs
compiler/Boreal/IR/ANFCore/: Types.hs
compiler/Boreal/IR/RawCore/: Types.hs
compiler/Driver/: BuildFlags.hs  Cache.hs  DebugFlags.hs  Query.hs  Rules.hs
examples/: add-to-case-result.bor  datatype-declaration.bor  if-then-else.bor  import-statement.bor  let-in.bor  nested-let-bindings.bor  parentheses.bor  record-declaration.bor
include/: parser.c  parser.h
lua/: prelude.lua
scripts/: watch.sh
src/Boreal/: ScopeEnvironment.hs
src/Boreal/Backend/: ASM.hs  Lua.hs  UXN.hs
src/Boreal/Backend/ASM/: Types.hs
src/Boreal/Backend/Lua/: PrettyPrinter.hs  Types.hs
src/Boreal/Backend/UXN/: Types.hs
src/Boreal/Frontend/: Lexer.hs  Parser.hs  Source.hs  Syntax.hs  TreeSitter.hs  Types.hs
src/Boreal/Frontend/Parser/: Types.hs
src/Boreal/IR/: ANFCore.hs  RawCore.hs
src/Boreal/IR/ANFCore/: Types.hs
stdlib/: Prelude.bor
test/: Main.hs  Utils.hs
test/BorealTest/: ANFTest.hs  ASMTest.hs  LexerTest.hs  LuaTest.hs  ParserTest.hs  RawCoreTest.hs  UXNTest.hs
test/BorealTest/Backend/: LuaGoldenTest.hs  LuaRunTest.hs
test/golden/asm/: addition.tal
test/golden/cst/: case-expression.hs  let-binding.hs  nested-let-bindings.hs  parentheses.hs
test/golden/lua/: addition.lua  arithmetic-operations-let-binding.lua  arithmetic-operations.lua  parenthesised-expression.lua  subtraction.lua  sum-type.lua
test/run-test/boreal/: arithmetic-expression.bor
testsuite/: testsuite.cabal
testsuite/golden/cst/: import-statement.hs
testsuite/run-test/boreal/: case-expression.bor  if-then-else.bor
testsuite/test/: Main.hs  Utils.hs
testsuite/test/BorealTest/: ANFTest.hs  ParserTest.hs  RawCoreTest.hs
testsuite/test/BorealTest/Backend/: LuaGoldenTest.hs  LuaRunTest.hs
testsuite/test/golden/cst/: if-then-else.hs  import-statement.hs  parentheses.hs
testsuite/test/golden/lua/: addition.lua  arithmetic-operations-let-binding.lua  arithmetic-operations.lua  case-expression.lua  if-then-else.lua  parenthesised-expression.lua  subtraction.lua  sum-type.lua
tree-sitter/: binding.gyp  example.bor  grammar.js  package.json
tree-sitter-boreal/: Package.swift  case-expression.bor  datatype-declaration.bor  function-definition.bor  grammar.js  let-in.bor  package.json  pyproject.toml
tree-sitter-boreal/bindings/node/: binding.cc  index.js
tree-sitter-boreal/bindings/python/tree_sitter_boreal/: __init__.py
tree-sitter-boreal/bindings/swift/TreeSitterBoreal/: boreal.h
tree-sitter-boreal/queries/: highlights.scm
tree-sitter-boreal/src/: grammar.json  node-types.json  parser.c
tree-sitter-boreal/test/corpus/: case_expression.txt  expressions.txt  let-bindings.txt  lua-native.txt  parenthesised-expression.txt  product_type.txt  qualified_module.txt  sum_type.txt  type_declaration.txt
tree-sitter/bindings/rust/: lib.rs
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/test/corpus/: expressions.txt
vm/: .clang-format  .clangd  Makefile  chunk.c  main.c  meson.build
vm/include/: chunk.h  common.h  debug.h  memory.h  meson.build  value.h  vm.h
vm/src/: chunk.c  debug.c  main.c  memory.c  meson.build  value.c  vm.c
(+4 files in other folders)
