cabal-version:      3.6
name:               boreal
version:            0.1.0.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

common rts-options
  ghc-options: -rtsopts

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -fdicts-strict
    -fmax-worker-args=16 -fspec-constr-recursive=16

  -- -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    BangPatterns
    CApiFFI
    DataKinds
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    TupleSections
    ViewPatterns

library
  import:           ghc-options

  -- cabal-fmt: expand src/
  exposed-modules:  Boreal.Frontend.TreeSitter
  other-modules:    Paths_boreal
  include-dirs:     tree-sitter/src
  install-includes: tree_sitter/parser.h
  c-sources:        tree-sitter/src/parser.c
  hs-source-dirs:   src
  build-depends:
    , atomic-counter
    , base                         >=4.18 && <5
    , containers
    , effectful-core
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , text-display
    , tree-sitter
    , vector

  default-language: GHC2021

executable boreal
  import:           ghc-options
  import:           rts-options
  main-is:          Main.hs
  other-modules:    Paths_boreal
  hs-source-dirs:   app
  build-depends:
    , base                         >=4.18 && <5
    , boreal
    , containers
    , directory
    , filepath
    , parsec
    , prettyprinter-ansi-terminal
    , text

  default-language: GHC2021

test-suite boreal-test
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    BorealTest.LexerTest
    BorealTest.ParserTest
    Utils

  hs-source-dirs: test
  build-depends:
    , base          >=4.18 && <5
    , boreal
    , PyF
    , tasty
    , tasty-focus
    , tasty-hunit
    , text
    , text-display
    , vector
