cabal-version:      3.6
name:               boreal
version:            0.1.0.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

tested-with:        GHC ==9.6.5

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -fdicts-strict
    -fmax-worker-args=16 -fspec-constr-recursive=16

  cc-options:         -g

  -- -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    BangPatterns
    CApiFFI
    DataKinds
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    TupleSections
    ViewPatterns

library
  import:           ghc-options

  -- cabal-fmt: expand compiler/
  exposed-modules:
    Boreal.Backend.Lua
    Boreal.Backend.Lua.Types
    Boreal.Frontend.Source
    Boreal.Frontend.Syntax
    Boreal.Frontend.TreeSitter
    Boreal.Frontend.Types
    Boreal.IR.ANFCore
    Boreal.IR.ANFCore.Types
    Boreal.IR.RawCore
    Boreal.IR.Types
    Boreal.ScopeEnvironment
    Boreal.SourceInfo
    Driver
    Driver.BuildFlags
    Driver.Cache
    Driver.DebugFlags

  other-modules:    Paths_boreal
  includes:         ./tree-sitter-boreal/src/parser.c
  include-dirs:     ./tree-sitter-boreal/src/tree_sitter
  install-includes: ./tree-sitter-boreal/src/tree_sitter.h
  cxx-sources:      ./tree-sitter-boreal/src/parser.c
  hs-source-dirs:   compiler
  build-depends:
    , atomic-counter
    , base                         >=4.18 && <5
    , bytestring
    , containers
    , directory
    , effectful
    , effectful-core
    , extra
    , filepath
    , language-lua
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , PyF
    , sel
    , text
    , text-display
    , tree-sitter
    , typed-process
    , vector
    , zenc

  default-language: GHC2021

executable boreal
  import:         ghc-options
  import:         rts-options
  hs-source-dirs: app/boreal/
  main-is:        Main.hs
  other-modules:  CLI.Types
  build-depends:
    , base                  >=4.18 && <5
    , boreal
    , bytestring
    , directory
    , effectful
    , effectful-core
    , filepath
    , optparse-applicative
    , sel
    , text

test-suite boreal-test
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    BorealTest.ANFTest
    BorealTest.Backend.LuaGoldenTest
    BorealTest.Backend.LuaRunTest
    BorealTest.ParserTest
    BorealTest.RawCoreTest
    Utils

  hs-source-dirs: test
  build-depends:
    , base           >=4.18 && <5
    , boreal
    , bytestring
    , containers
    , pretty-simple
    , PyF
    , sel
    , tasty
    , tasty-focus
    , tasty-golden
    , tasty-hunit
    , text
    , text-display
    , tree-diff
    , tree-sitter
    , typed-process
    , vector
