cabal-version:      3.6
name:               boreal-client
version:            0.1.0.0
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==9.6.6

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T -l -hi -i0.5"

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -fdicts-strict
    -fmax-worker-args=16 -fspec-constr-recursive=16

  -- -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    BangPatterns
    CApiFFI
    DataKinds
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    TupleSections
    ViewPatterns

library
  import:          ghc-options
  import:          rts-options
  hs-source-dirs:  src
  exposed-modules: Boreal.Client
  build-depends:
    , aeson
    , base        >=4.18 && <5
    , boreal-api
    , bytestring
    , effectful
    , network

executable boreal
  import:         ghc-options
  import:         rts-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , boreal-api
    , boreal-client
    , bytestring
    , directory
    , effectful
    , effectful-core
    , filepath
    , log-base
    , log-effectful
    , network
    , optparse-applicative
    , sel
    , text
    , text-display
    , typed-process
