cabal-version:      3.6
name:               boreal-daemon
version:            0.1.0.0
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==9.6.6
extra-source-files:
  tree-sitter-boreal/src/parser.c
  tree-sitter-boreal/src/tree_sitter/parser.h

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -fdicts-strict
    -fmax-worker-args=16 -fspec-constr-recursive=16

  cc-options:         -g

  -- -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    BangPatterns
    CApiFFI
    DataKinds
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    TupleSections
    ViewPatterns

library driver
  import:          ghc-options
  build-depends:
    , atomic-counter
    , base
    , boreal-api
    , boreal-daemon
    , bytestring
    , containers
    , dependent-hashmap
    , dependent-sum-template
    , directory
    , effectful
    , filepath
    , hashable
    , log-base
    , log-effectful
    , optparse-applicative
    , pretty-simple
    , rock
    , sel
    , some
    , text
    , transformers

  hs-source-dirs:  driver

  -- cabal-fmt: expand driver/
  exposed-modules:
    Driver
    Driver.Cache
    Driver.CLI
    Driver.Logging
    Driver.Query
    Driver.Rules
    Driver.Session

library
  import:           ghc-options

  -- cabal-fmt: expand compiler/
  exposed-modules:
    Boreal.Backend.Lua
    Boreal.Backend.Lua.Types
    Boreal.Frontend.Source
    Boreal.Frontend.Syntax
    Boreal.Frontend.TreeSitter
    Boreal.Frontend.Types
    Boreal.IR.ANFCore
    Boreal.IR.ANFCore.Types
    Boreal.IR.RawCore
    Boreal.IR.Types
    Boreal.ScopeEnvironment
    Boreal.SourceInfo

  other-modules:    Paths_boreal_daemon
  include-dirs:     tree-sitter-boreal/src
  includes:         tree_sitter/parser.h
  install-includes: tree_sitter/parser.h
  cxx-sources:      tree-sitter-boreal/src/parser.c
  hs-source-dirs:   compiler
  build-depends:
    , atomic-counter
    , base                         >=4.18 && <5
    , boreal-api
    , bytestring
    , containers
    , dependent-sum-template
    , directory
    , effectful
    , effectful-core
    , extra
    , filepath
    , hashable
    , language-lua
    , log-base
    , log-effectful
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , PyF
    , rock
    , sel
    , some
    , text
    , text-display
    , tree-sitter
    , typed-process
    , vector
    , zenc

executable boreald
  import:         ghc-options
  import:         rts-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson
    , atomic-counter
    , base                                   >=4.18 && <5
    , boreal-api
    , boreal-daemon:{boreal-daemon, driver}
    , bytestring
    , containers
    , directory
    , effectful
    , effectful-core
    , exceptions
    , filelock
    , filepath
    , hdaemonize
    , log-base
    , log-effectful
    , network
    , optparse-applicative
    , sel
    , text

test-suite boreal-test
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    BorealTest.ANFTest
    BorealTest.Backend.LuaGoldenTest
    BorealTest.Backend.LuaRunTest
    BorealTest.ParserTest
    BorealTest.RawCoreTest
    Utils

  hs-source-dirs: test
  build-depends:
    , base                                   >=4.18 && <5
    , boreal-daemon:{boreal-daemon, driver}
    , bytestring
    , containers
    , effectful
    , filepath
    , pretty-simple
    , PyF
    , sel
    , tasty
    , tasty-focus
    , tasty-golden
    , tasty-hunit
    , text
    , text-display
    , tree-diff
    , tree-sitter
    , typed-process
    , vector
